--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.13.5",
     "cors": "^2.8.6",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
